# ShrimPG

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  go.mod  go.sum  main.go  makefile  passwrods.csv
cmd/passwordManager/: main.go
internal/api/: authMiddleware.go  auth_handler.go  auth_handlers.go  auth_middleware.go  cors.go  handler.go  helper.go  password_handler.go  rate_limiter.go  types.go
internal/auth/: auth.go  generator.go
internal/crypto/: encryption.go  encryption_test.go  params.go
internal/crypto/rpc/: client.go  crypto.pb.go  crypto.proto  crypto_grpc.pb.go  pb.go  service.go  service_test.go
internal/db/: db.go  init_migrations.go  postgres.go  storage.go  storage_test.go
internal/model/: password.go
internal/pkg/dictionary/: words.go
internal/storage/: DeletePassword.go  IsYourPasswordCool.go  PrintList.go  deletePassword.go  dictionary.go  encryption.go  generator.go  postgres.go  printVault.go  redis.go  savingToFile.go  storage.go
internal/utils/: auth.go
migrations/: 000001_init.down.sql  000001_init.up.sql
pkg/validator/: isYourPasswordCool.go  isYourPasswordCool_test.go  validator.go  validator_test.go
rust-crypto-service/: Cargo.toml  Dockerfile  build.rs
rust-crypto-service/proto/: crypto.proto
rust-crypto-service/src/: crypto.rs  lib.rs  main.rs  proto.rs
rust-crypto-service/tests/: service.rs
